# marketpsych

./: LICENSE  README.md  load_data.ipynb  setup.cfg  setup.py  sftp.py  sftp_client.py
marketpsych/: README.md  __init__.py  mpwidgets.py  sftp.py
notebooks/: README.md  aggregate_rmas.ipynb  i_introduction.ipynb  ii_selection.ipynb  iii_aggregation.ipynb  iv_trading.ipynb  load_data.ipynb  load_data_colab.ipynb  selecting_assets.ipynb  v_USInflationForecast.ipynb
