[metadata]
name=marketpsych
version=0.0.5
author=MarketPsych Data
description=Python libraries for working with MarketPsych's feeds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marketpsych/marketpsych

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

python_requires = >=3.6
